// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`supports yes/no contest allows voting for both yes and no 1`] = `
.c9 {
  position: relative;
  border-radius: 0.125rem;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  background: #FFFFFF;
  cursor: pointer;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
  text-align: left;
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c9::before {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  border-right: 1px solid;
  border-color: rgb(211,211,211);
  border-radius: 0.125rem 0 0 0.125rem;
  background: #ffffff;
  width: 3rem;
  text-align: center;
  color: #028099;
  font-size: 2rem;
  font-weight: 700;
  content: '';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c2 {
  max-width: 66ch;
  line-height: 1.2;
}

.c2 h1 {
  margin: 2rem 0 1rem;
  line-height: 1.1;
  font-size: 1.5rem;
}

.c2 h2 {
  margin: 1.5rem 0 0.75rem;
  font-size: 1.25rem;
}

.c2 h3 {
  font-size: 1.17rem;
}

.c2 h4 {
  font-size: 1rem;
}

.c2 h5 {
  font-size: 0.9rem;
}

.c2 h3,
.c2 h4,
.c2 h5,
.c2 p {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p {
  margin-top: -0.75rem;
}

.c2 h3 + p,
.c2 h4 + p,
.c2 h5 + p {
  margin-top: -1rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c2 dl {
  margin: 1rem 0;
}

.c10 {
  word-break: break-word;
}

.c1 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 2rem 0.5rem;
}

.c7 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 2rem;
}

.c3 {
  text-transform: uppercase;
  font-size: 0.85rem;
  font-weight: 600;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  overflow: auto;
}

.c4::before,
.c4::after {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 0.25rem;
  content: '';
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c4::before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c4::after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c6 {
  margin: 0 auto;
  width: 100%;
  padding: 0.5rem 2rem 2rem;
}

.c8 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 1rem;
}

@media (min-width:480px) {
  .c9 {
    padding: 1rem 1rem 1rem 4rem;
  }
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
      id="contest-header"
    >
      <div
        class="c2"
        id="audiofocus"
      >
        <h1
          aria-label="Prop 1: Garbage Collection Program."
        >
          <div
            class="c3"
          >
            County
          </div>
          Prop 1: Garbage Collection Program
        </h1>
        <p>
          <strong>
            Vote Yes or No.
          </strong>
          <span
            class="screen-reader-only"
          >
            To navigate through the contest choices, use the down button. To move to the next contest, use the right button.
          </span>
        </p>
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c2"
          >
            <p
              class=""
            >
              <span>
                description
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
        data-testid="contest-choices"
      >
        <button
          class="c9"
          data-choice="yes"
          data-selected="false"
          role="option"
          type="button"
        >
          <div
            class="c2"
          >
            <p
              aria-label=" Yes on Prop 1"
              class="c10"
            >
              Yes
            </p>
          </div>
        </button>
        <button
          class="c9"
          data-choice="no"
          data-selected="false"
          role="option"
          type="button"
        >
          <div
            class="c2"
          >
            <p
              aria-label=" No on Prop 1"
              class="c10"
            >
              No
            </p>
          </div>
        </button>
      </div>
    </div>
  </main>
</div>
`;

exports[`supports yes/no contest displays warning when attempting to change vote 1`] = `
.c11 {
  position: relative;
  border-radius: 0.125rem;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  background: #FFFFFF;
  cursor: pointer;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
  text-align: left;
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c11::before {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  border-right: 1px solid;
  border-color: rgb(211,211,211);
  border-radius: 0.125rem 0 0 0.125rem;
  background: #ffffff;
  width: 3rem;
  text-align: center;
  color: #028099;
  font-size: 2rem;
  font-weight: 700;
  content: '';
}

.c9 {
  position: relative;
  border-radius: 0.125rem;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  background: #028099;
  cursor: pointer;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
  text-align: left;
  color: #FFFFFF;
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c9::before {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  border-right: 1px solid;
  border-color: #028099;
  border-radius: 0.125rem 0 0 0.125rem;
  background: #ffffff;
  width: 3rem;
  text-align: center;
  color: #028099;
  font-size: 2rem;
  font-weight: 700;
  content: '✓';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c2 {
  max-width: 66ch;
  line-height: 1.2;
}

.c2 h1 {
  margin: 2rem 0 1rem;
  line-height: 1.1;
  font-size: 1.5rem;
}

.c2 h2 {
  margin: 1.5rem 0 0.75rem;
  font-size: 1.25rem;
}

.c2 h3 {
  font-size: 1.17rem;
}

.c2 h4 {
  font-size: 1rem;
}

.c2 h5 {
  font-size: 0.9rem;
}

.c2 h3,
.c2 h4,
.c2 h5,
.c2 p {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p {
  margin-top: -0.75rem;
}

.c2 h3 + p,
.c2 h4 + p,
.c2 h5 + p {
  margin-top: -1rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c2 dl {
  margin: 1rem 0;
}

.c10 {
  word-break: break-word;
}

.c1 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 2rem 0.5rem;
}

.c7 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 2rem;
}

.c3 {
  text-transform: uppercase;
  font-size: 0.85rem;
  font-weight: 600;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  overflow: auto;
}

.c4::before,
.c4::after {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 0.25rem;
  content: '';
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c4::before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c4::after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c6 {
  margin: 0 auto;
  width: 100%;
  padding: 0.5rem 2rem 2rem;
}

.c8 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 1rem;
}

@media (min-width:480px) {
  .c11 {
    padding: 1rem 1rem 1rem 4rem;
  }
}

@media (min-width:480px) {
  .c9 {
    padding: 1rem 1rem 1rem 4rem;
  }
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
      id="contest-header"
    >
      <div
        class="c2"
        id="audiofocus"
      >
        <h1
          aria-label="Prop 1: Garbage Collection Program."
        >
          <div
            class="c3"
          >
            County
          </div>
          Prop 1: Garbage Collection Program
        </h1>
        <p>
          <strong>
            Vote Yes or No.
          </strong>
          <span
            class="screen-reader-only"
          >
            To navigate through the contest choices, use the down button. To move to the next contest, use the right button.
          </span>
        </p>
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c2"
          >
            <p
              class=""
            >
              <span>
                description
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
        data-testid="contest-choices"
      >
        <button
          class="c9"
          data-choice="yes"
          data-selected="true"
          role="option"
          type="button"
        >
          <div
            class="c2"
          >
            <p
              aria-label="Selected, Yes on Prop 1"
              class="c10"
            >
              Yes
            </p>
          </div>
        </button>
        <button
          class="c11"
          data-choice="no"
          data-selected="false"
          role="option"
          type="button"
        >
          <div
            class="c2"
          >
            <p
              aria-label=" No on Prop 1"
              class="c10"
            >
              No
            </p>
          </div>
        </button>
      </div>
    </div>
  </main>
</div>
`;
